# AI-Native_Project_Scaffolding

./: .cursorignore  .cursorrules  .gitignore  CHANGELOG.md  CHANGELOG.ru.md  CLAUDE.md  CLEANUP_REPORT.md  CONTRIBUTING.md  CONTRIBUTING.ru.md  CURRENT_CONTEXT_MAP.md  CURSOR_PROMPT_v3.6_FIXES.md  LICENSE  MANIFEST.in  PROJECT_STATUS.md  PROMPTS_LIBRARY.md  README.md  README.ru.md  SECURITY.md  TECHNICAL_SPECIFICATION.md  TRADEOFFS.md  ai_toolkit_v3.tar  benchmark.py  first manifesto.md  generate_map.py  main.py  pyproject.toml  requirements.txt  start.ps1  start.sh  toolkit_menu.bat
.cursor/rules/: project.md  review_guidelines.md  toolkit.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
AI-Native Project Scaffolding/: CONTEXT SWITCHER.py  START.py  builder.py  manifesto.md
_AI_INCLUDE/: PROJECT_CONVENTIONS.md  WHERE_IS_WHAT.md  WHERE_THINGS_LIVE.md
ai_toolkit/: README.md  pyproject.toml
ai_toolkit/_AI_INCLUDE/: PROJECT_CONVENTIONS.md  WHERE_IS_WHAT.md
ai_toolkit/docs/: manifesto.md
ai_toolkit/src/: cli.py
ai_toolkit/src/commands/: cleanup.py  create.py  migrate.py  update.py
ai_toolkit/src/core/: __init__.py  constants.py  file_utils.py
ai_toolkit/src/generators/: __init__.py  ci_cd.py  docker.py
docs/: CURSOR_INTEGRATION.md  DOCTOR_COMMAND.md  FAQ.md  FAQ.ru.md  FUTURE_IMPROVEMENTS.md  GUIDE.md  GUIDE.ru.md  QUICK_START.md  QUICK_START.ru.md  TOKEN_CALCULATION.md  manifesto.md
gui/: __init__.py  app.py
plugins/: __init__.py  manager.py
plugins/installed/: .gitkeep
scripts/: auto_update_docs.ps1  auto_update_docs.sh  bootstrap.ps1  bootstrap.sh  build.sh  isolate_heavy.sh  publish.sh  restore_heavy.sh  start_dashboard.ps1  start_dashboard.sh
src/: __init__.py  cli.py  py.typed  types.py
src/commands/: __init__.py  architect.py  cleanup.py  create.py  doctor.py  health.py  hooks.py  migrate.py  pack.py  review.py  status.py  trace.py  update.py  wizard.py
src/core/: __init__.py  config.py  constants.py  file_utils.py  i18n.py  manifesto.py  template_loader.py
src/generators/: __init__.py  ai_configs.py  ci_cd.py  docker.py  git.py  project_files.py  scripts.py
src/locales/: __init__.py  en.py  ru.py
src/utils/: __init__.py  ast_patcher.py  cleaner.py  fox_trace_map.py  heavy_mover.py  metrics.py  status_generator.py  token_scanner.py
templates/bot/: main.py.template
templates/bot/handlers/: __init__.py.template  start.py.template
templates/common/: config.py.template  database.py.template
templates/fastapi/: main.py.template
templates/parser/: scraper.py.template
templates/webapp/: app.js.template  index.html.template  styles.css.template
tests/: conftest.py  test_ast_patcher.py  test_cleanup.py  test_core.py  test_create.py  test_deep_clean_integration.py  test_doctor.py  test_fox_trace_map.py  test_garbage_cleaner.py  test_generators.py  test_health.py  test_heavy_mover.py  test_migrate.py  test_schema_extractor.py  test_status.py  test_update.py
web/: __init__.py  app.py  i18n.py
web/templates/: base.html  cleanup.html  create.html  existing.html  health.html  help.html  index.html  settings.html  welcome.html
