[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-toolkit"
version = "3.0.0"
description = "Create and manage AI-friendly Python projects for Cursor, Copilot, Claude, and Windsurf"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Michael Salmin"}
]
maintainers = [
    {name = "Michael Salmin"}
]
keywords = [
    "ai", "cursor", "copilot", "claude", "windsurf",
    "project-template", "telegram-bot", "developer-tools",
    "scaffolding", "code-generator", "vscode", "ide"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
    "types-PyYAML>=6.0",
]
web = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]
gui = [
    # tkinter is built into Python
]
all = [
    "ai-toolkit[dev,web]",
]

[project.scripts]
ai-toolkit = "src.cli:main"
aitk = "src.cli:main"

[project.urls]
"Homepage" = "https://github.com/Adrena1ine-ai/AI-Native_Project_Scaffolding"
"Bug Tracker" = "https://github.com/Adrena1ine-ai/AI-Native_Project_Scaffolding/issues"
"Documentation" = "https://github.com/Adrena1ine-ai/AI-Native_Project_Scaffolding#readme"
"Changelog" = "https://github.com/Adrena1ine-ai/AI-Native_Project_Scaffolding/blob/main/CHANGELOG.md"
"Source" = "https://github.com/Adrena1ine-ai/AI-Native_Project_Scaffolding"

[tool.setuptools]
packages = ["src", "src.core", "src.commands", "src.generators", "src.utils", "plugins"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.md", "*.template", "py.typed"]
templates = ["**/*.template"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true

disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "yaml",
    "tkinter.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "N999",   # invalid module name
    "RUF001", # ambiguous unicode character
    "SIM108", # ternary operator
]

[tool.ruff.lint.isort]
known-first-party = ["src", "plugins"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004"]
"__init__.py" = ["F401"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
